# ros2neuro_acquisition_eegdev

./: CMakeLists.txt  package.xml  plugins.xml
include/ros2neuro_acquisition_eegdev/: EGDDevice.hpp
src/: EGDDevice.cpp
